--- a/contact.html
+++ b/contact.html
@@ -2,15 +2,15 @@
 <html>
   <head>
     <title> Contact or Donate </title>
-    <link href="../css/style.css" rel="stylesheet" type="text/css" />
+    <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
 
   <div class="menu">
-    <a class="active" href="../index.html">Home</a>
-    <a href="../html/update.html">Update Log</a>
-    <a href="../html/contact.html">Contact or Donate</a>
-    <a href="../html/about.html">About</a>
+    <a class="active" href="index.html">Home</a>
+    <a href="update.html">Update Log</a>
+    <a href="contact.html">Contact or Donate</a>
+    <a href="about.html">About</a>
   </div>
     
   </body>
