--- a/update.html
+++ b/update.html
@@ -12,7 +12,8 @@
     <a href="contact.html">Contact or Donate</a>
     <a href="about.html">About</a>
   </div>
-
+    
+   <h2> About </h2>
     
   </body>
 </html>
