--- a/update.html
+++ b/update.html
@@ -7,8 +7,8 @@
   <body>
 
   <div class="menu">
-    <a class="active" href="index.html">Home</a>
-    <a href="update.html">Update Log</a>
+    <a href="index.html">Home</a>
+    <a class="active" href="update.html">Update Log</a>
     <a href="contact.html">Contact or Donate</a>
     <a href="about.html">About</a>
   </div>
