--- a/contact.html
+++ b/contact.html
@@ -7,9 +7,9 @@
   <body>
 
   <div class="menu">
-    <a class="active" href="index.html">Home</a>
+    <a href="index.html">Home</a>
     <a href="update.html">Update Log</a>
-    <a href="contact.html">Contact or Donate</a>
+    <a class="active" href="contact.html">Contact or Donate</a>
     <a href="about.html">About</a>
   </div>
     
