--- a/about.html
+++ b/about.html
@@ -7,10 +7,10 @@
   <body>
 
   <div class="menu">
-    <a class="active" href="index.html">Home</a>
+    <a href="index.html">Home</a>
     <a href="update.html">Update Log</a>
     <a href="contact.html">Contact or Donate</a>
-    <a href="about.html">About</a>
+    <a class="active" href="about.html">About</a>
   </div>
     
   <h2> About </h2>   
